--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="section-heading">About</div>
             <p class="paragraph-text justify-text">
                 Master student in Robot Systems with Bachelor degree in Computer 
-                Science. I am a highly motivated person with two years of work experience 
+                Science. I am a highly motivated person with six years of work experience 
                 in an international software development team with excellent 
                 communication skills, who thrives in a fast-paced dynamic environment. 
                 Proficient in C++, C#, Python and ROS with a focus on machine learning and 
