--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,7 +8,7 @@
                 <div class="what-i-do">
                     <h3 class="center-align skills-subsection">Summary</h3>
                     <p class="paragraph-text center-align">
-                        I'm a robotics engineer with 7 years of work experience, where 2 were carried out in full time.
+                        I'm a robotics engineer with 6 years of work experience, 2 of them in full time
                     </p>
                 </div>
                 <div class="technical-skills">
