Update skills and about

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,12 +3,12 @@
         <div id="about-text">
             <div class="section-heading">About</div>
             <p class="paragraph-text justify-text">
-                Master student in Robot Systems with Bachelor degree in Computer 
-                Science. I am a highly motivated person with six years of work experience 
-                in an international software development team with excellent 
-                communication skills, who thrives in a fast-paced dynamic environment. 
-                Proficient in C++, C#, Python and ROS with a focus on machine learning and 
-                robotic applications.
+                AI Software Engineer with a master degree in robot systems and a 
+                bachelor degree in computer science. 
+                I am a highly motivated person with +3 years of work experience in 
+                high- and deep tech companies as software engineer, 
+                with excellent communication skills who thrives in a fast-paced dynamic environment. 
+                Proficient in C++ and Python with a focus on machine learning and robotic applications. 
             </p>
         </div>
     </section>
