--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,7 +8,7 @@
                 <div class="what-i-do">
                     <h3 class="center-align skills-subsection">Summary</h3>
                     <p class="paragraph-text center-align">
-                        I'm a robotics engineer with 6 years of work experience, 2 of them in full time
+                        I have a master's degree in robotics systems and specialize in AI software engineering. I am proficient in both C++ and Python.
                     </p>
                 </div>
                 <div class="technical-skills">
@@ -20,7 +20,7 @@
                         </div> <!-- End Skill Bar -->
 
                         <div class="skillbar clearfix " data-percent="90%">
-                            <div class="skillbar-title" style="background: #2980b9;"><span>ROS</span></div>
+                            <div class="skillbar-title" style="background: #2980b9;"><span>Python</span></div>
                             <div class="skillbar-bar" style="background: #3498db;"></div>
                         </div> <!-- End Skill Bar -->
 
@@ -30,7 +30,7 @@
                         </div> <!-- End Skill Bar -->
 
                         <div class="skillbar clearfix " data-percent="75%">
-                            <div class="skillbar-title" style="background: #2980b9;"><span>Python </span></div>
+                            <div class="skillbar-title" style="background: #2980b9;"><span>ROS </span></div>
                             <div class="skillbar-bar" style="background: #3498db;"></div>
                         </div> <!-- End Skill Bar -->
                         
